# anime-manager

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  App.vue  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: NavRail.tsx  NavRail.vue
src/composables/: useDirectoryBrowser.ts  useLayout.ts  useLibrary.ts  useSettings.ts
src/pages/: DetailPage.tsx  DetailPage.vue  LibraryPage.tsx  LibraryPage.vue  SettingsPage.tsx  SettingsPage.vue
src/services/: library.ts
